<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.egg.naodianboluzhi">

    <TextView
        android:id="@+id/ndblztv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/ndblztv1"
        android:textColor="#FFFFFF"
        android:textSize="27sp" />

    <ImageView
        android:id="@+id/ndblziv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ndblzbt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/ndb" />

    <TextView
        android:id="@+id/ndblztv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ndblztv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/ndblztv2"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/ndblzbt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ndblztv2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="#6E7B8B"
        android:text="@string/ndblzbt1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


</RelativeLayout>